fixed button overflow

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@
 }
 
 #jumbo-button:hover{
-    transform: translateY(4px);
+    transform: translateX(4px);
     transition: .2;
     background-color: gainsboro;
     color: black;
